hakubernetes/k8sdashboard/kube-system-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-system-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "internal-nginx" 
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  tls:
  - hosts:
    - devops-internalk8s.10010sh.cn
    secretName: universal-10010sh-cn-tls
  rules:
  - host: devops-internalk8s.10010sh.cn
    http:
      paths:
      - path: /dashboard
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
